[tool.poetry]
name = "affordmed"
version = "0.1.0"
description = ""
authors = ["NarasimhaSaladi <narasimhasaladi7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.104.1"
uvicorn = "0.24.0"
pydantic = "2.5.0"
python-multipart = "0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
